/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.protodata;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.protodata.ast";
option java_outer_classname = "DeclarationsProto";
option java_multiple_files = true;

import "spine/protodata/ast.proto";
import "spine/protodata/source.proto";

// A tuple of a message type and the header of the file where it is declared.
message MessageInFile {

    // The type of the message.
    MessageType message = 1 [(required) = true];

    // The header of the file where the `message` is declared.
    ProtoFileHeader file_header = 2 [(required) = true];
}

// A tuple of an enum type and the header of the file where it is declared.
message EnumInFile {

    // The type of the enum.
    EnumType enum = 1 [(required) = true];

    // The header of the file where the `enum` is declared.
    ProtoFileHeader file_header = 2 [(required) = true];
}

// A tuple of a service declaration and the header of the file where it is declared.
message ServiceInFile {

    // The service definition.
    Service service = 1 [(required) = true];

    // The header of the file where the `service` is declared.
    ProtoFileHeader file_header = 2 [(required) = true];
}
